Made some fonts bigger to prevent screen zoom on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,4 +66,9 @@
   body {
     @apply bg-background text-foreground;
   }
+  input,
+  select,
+  textarea {
+    font-size: 16px !important;
+  }
 }
